force-app/main/default/objects/PackageItem__c/PackageItem__c.object-meta.xml
<CustomObject>
    <label>Package Item</label>
    <nameField>
        <displayFormat>PI-{00000000}</displayFormat>
        <label>Package Item Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>