force-app/main/default/objects/PackageItem__c/fields/PackageItem__c.field-meta.xml
<CustomField>
    <fullName>PackageItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Item</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Product</value>
        </filterItems>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Gift</value>
        </filterItems>
        <filterItems>
            <field>Product2.AvailableForSample__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Package Items (Package Item)</relationshipLabel>
    <relationshipName>Package_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>