force-app/main/default/objects/PackageItem__c/fields/ParentPackage__c.field-meta.xml
<CustomField>
    <fullName>ParentPackage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Package</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Package</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Package Items (Parent Package)</relationshipLabel>
    <relationshipName>Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>