force-app/main/default/objects/PackageItem__c/fields/ProductRecordType__c.field-meta.xml
<CustomField>
    <fullName>ProductRecordType__c</fullName>
    <formula>PackageItem__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Record Type</label>
    <type>Text</type>
</CustomField>