force-app/main/default/objects/PackageItem__c/fields/ProductRef__c.field-meta.xml
<CustomField>
    <fullName>ProductRef__c</fullName>
    <formula>PackageItem__r.ProductRef__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Ref</label>
    <type>Text</type>
</CustomField>